--- a/app.json
+++ b/app.json
@@ -22,7 +22,7 @@
       "selectedIconPath": "images/1_5.png"
     }, {
       "pagePath": "pages/index/index",
-      "text": "反馈",
+      "text": "占位图标",
       "iconPath": "images/1_2.png",
       "selectedIconPath": "images/1_3.png"
     }]
